Fixed card z-index problem for Safari

--- a/public/valentine/style.css
+++ b/public/valentine/style.css
@@ -72,8 +72,8 @@ a:visited {
 
   -webkit-transition: -webkit-transform 300ms 0ms, top 400ms 200ms;
   -moz-transition: -webkit-transform 300ms 0ms, top 400ms 200ms;
-  -o-transition: -webkit-transform 300ms 0ms, top 400ms 200ms;
-  transition: -webkit-transform 300ms 0ms, top 400ms 200ms;
+  -o-transition: -webkit-transform 300ms 0ms, top 400ms 200ms; 
+  transition: -webkit-transform 300ms 0ms, top 400ms 200ms; 
 
   -webkit-transform: rotateX(180deg);
   -moz-transform: rotateX(180deg);
@@ -192,7 +192,7 @@ a:visited {
   height: 200px;
   top: 0;
   background-color: #FF0000;
-  z-index: -1;
+  z-index: 0;
 
   -moz-transition: margin-top 200ms 0ms;
   -o-transition: margin-top 200ms 0ms;
@@ -217,6 +217,8 @@ a:visited {
     width: 25px;
     height: 40px;
     background: #FFFFFF;
+    -webkit-border-radius: 25px 25px 0 0;
+    -o-border-radius: 25px 25px 0 0;
     -moz-border-radius: 25px 25px 0 0;
     border-radius: 25px 25px 0 0;
     -webkit-transform: rotate(-45deg);
